<resources>
    <string name="app_name" translatable="false">OpenChallenge</string>
    <string name="action_search">Search...</string>
    <string name="app_name_label" translatable="false">Open Challenge</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="desc_cardlay">Competition between hackers, who\'s gonna be the first destroying the machine? Maybe Harold Finch! Come here and prove yourself </string>
    <string name="rules">Rules</string>
    <string name="title_activity_maps" translatable="false">Map</string>

    <string name="choose_winner">Choooose winner!</string>
    <string name="join_challenge">Join challenge</string>
    <string name="joined">Joined!</string>
    <string name="participants">%1$d participants</string>
    <string name="single_participant">%1$d participant</string>
    <string name="congratulations_newu">Congratulations!</string>

    <string name="unknown_error">Unknown error</string>
    <string name="no_internet_connection">No connection available</string>
    <string name="sign_up_cancelled">Pressed back during sign-up</string>
    <string name="login_cancelled">Pressed back during login</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_map_title">Nearby</string>
    <string name="nav_organize_title">Organize</string>
    <string name="nav_saved_title">Favorites</string>
    <string name="nav_profile_title">Profile</string>

    <string name="facebook_application_id" translatable="false">247472875705022</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb247472875705022</string>

    <string name="twitter_consumer_key" translatable="false">YOURCONSUMERKEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOURCONSUMERSECRET</string>
    <string name="logout">Logout</string>
    <string name="delete_user">Delete user</string>
    <string name="organized_challenges">Organized challenges</string>
    <string name="joined_challenges">Joined challenges</string>
    <string name="organize_create_btn">Create it!</string>
    <string name="organize_location"><![CDATA[Choose a location ->]]></string>
    <string name="organize_date"><![CDATA[Choose a date ->]]></string>
    <string name="organize_chall_rules">Challenge rules</string>
    <string name="organize_chall_desc">Challenge description</string>
    <string name="organize_chall_name">Challenge name</string>
    <string name="chall_location">Location</string>
    <string name="filter">Filter</string>
    <string name="welcome_msg">Welcome To OpenChallenge</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>


    <!-- Override FirebaseUI strings -->
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="sign_in_with_facebook">Continue with Facebook</string>
    <string name="sign_in_with_twitter">Continue with Twitter</string>
    <string name="sign_in_with_email">Continue with email</string>
    <string name="choose_username">Username</string>
    <string name="choose_status">Status</string>
    <string name="configure_profile">Configure your profile</string>
    <string name="insert_new_status">Insert new status</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="ok">OK</string>
    <string name="terminate_challenge_msg">The challenge will end. Other users will not be able to join any more.</string>
    <string name="confirm_termination">Do you want to end this challenge?</string>
    <string name="choose_winners">Choose winners</string>
    <string name="choose_first">Choose the first</string>
    <string name="choose_second">Choose the second</string>
    <string name="choose_third">Choose the third</string>
    <string name="click_button">Click the button</string>
    <string name="said_click_button">I said click the button!!!</string>
    <string name="no_internet_alert">Whoops! You are not connected to Internet!</string>
    <string name="retry_now">Retry now</string>
    <string name="no_internet_instructions">Check the status of your connection and press the button when you are back online</string>
    <string name="sort_by">Sort by</string>
    <string name="show">Show</string>
    <string name="error_profpic_upload">Error uploading profile picture!</string>
    <string name="success_profpic_upload">Profile picture uploaded!</string>
    <string name="help_us">Help us</string>
    <string name="donate">Donate</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="info_copyright">Info/Copyright</string>
    <string name="invite">Invite</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invited">Invited</string>
    <string name="invitations">Invitations</string>
    <string name="loading">Loading...</string>
    <string name="uploading_challenge">Uploading challenge..</string>
    <string name="choose_name">Choose a name for the challenge!</string>
    <string name="choose_description">Insert a little description!</string>
    <string name="insert_rules">Insert some rules!</string>
    <string name="choose_date">Choose a date!</string>
    <string name="choose_location">Choose a location!</string>
    <string name="choose_picture">Choose a picture!</string>
    <string name="delete">Cancel</string>
    <string name="wait_position">Wait position loading</string>
    <string name="invite_your_friends">Invite your friends</string>

</resources>
