<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                card:cardCornerRadius="10dp"
                card:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/organize_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/organize_chall_name" />

                    <EditText
                        android:id="@+id/organize_desc_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/organize_chall_desc" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                card:cardCornerRadius="10dp"
                card:contentPadding="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/rules"
                    android:textAlignment="center"
                    android:layout_marginBottom="0dp"/>

                <EditText
                    android:id="@+id/organize_rules_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/organize_chall_rules" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                card:cardCornerRadius="10dp"
                card:contentPadding="5dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/organize_date_btn"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_column="1"
                        android:layout_gravity="end"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_row="1"
                        android:background="@drawable/clock_24"
                        android:backgroundTint="@color/colorAccent" />

                    <TextView
                        android:id="@+id/organize_date_text"
                        android:layout_column="0"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_row="1"
                        android:text="@string/organize_date"
                        android:textColor="@color/backGroundHome1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/organize_place_text"
                        android:layout_column="0"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_row="0"
                        android:text="@string/organize_location"
                        android:textColor="@color/backGroundHome1"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/organize_find_place"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_column="1"
                        android:layout_gravity="end"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_row="0"
                        android:background="@drawable/map_24"
                        android:backgroundTint="@color/colorAccent" />

                </GridLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                card:cardBackgroundColor="#B4B4B4"
                card:cardCornerRadius="10dp"
                card:contentPadding="0dp">


                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/upload_img"
                    android:id="@+id/organize_image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_marginBottom="0dp"
                    android:layout_row="6"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside" />

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/organize_create_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/organize_create_btn"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>